--- a/scss/core/_components.scss
+++ b/scss/core/_components.scss
@@ -2,6 +2,7 @@
 
 & {
 	// Component Styles
+	@import "../components/comps";
 	@import "../components/buttons-toggles";
 	@import "../components/dotlines";
 }
