--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -1,6 +1,6 @@
 <form class="{{cssClass}}" autocomplete="off">
 	<section class="item-top flex-horizontal">
-		<input class="item-name top-title shadowed" type="text" value="{{item.name}}" readonly />
+		<input class="comp-title sheet-title shadowed" type="text" value="{{item.name}}" readonly />
 	</section>
 	<section class="item-main main">
 		<div class="scene-selection">
