--- a/templates/parts/active-effects.hbs
+++ b/templates/parts/active-effects.hbs
@@ -6,7 +6,7 @@
 				<img class="item-image" src="{{effect.data.icon}}" width="24" height="24"/>
 			</td>
 			<td class="effect-name flex">
-				<label class="item-name">{{effect.data.label}}</label>
+				<label class="comp-title">{{effect.data.label}}</label>
 			</td>
 			<td style="width: 45px;">
 				<div class="item-controls effect-controls flex">
