--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -1,7 +1,7 @@
 <form class="{{cssClass}}" autocomplete="off">
 	<section class="item-top flex-horizontal">
 		<img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
+		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 	<section class="item-main flex-vertical">
 		{{#if isEmbeddedItem}}
@@ -24,15 +24,15 @@
 		{{/if}}
 
 		<div class="flex-horizontal">
-			<div class="labelled-item labelled-horizontal">
+			<div class="comp comp-horizontal">
 				<label>Load: </label>
 				<input data-dtype="Number" type="number" name="data.load" value="{{data.load}}">
 			</div>
-			<div class="labelled-item labelled-horizontal">
+			<div class="comp comp-horizontal">
 				<label>Uses: </label>
 				<input data-dtype="Number" type="number" name="data.uses.max" value="{{data.uses.max}}">
 			</div>
-			<div class="labelled-item labelled-horizontal">
+			<div class="comp comp-horizontal">
 				<label>Max per Score: </label>
 				<input data-dtype="Number" type="number" name="data.num_available" value="{{data.num_available}}">
 			</div>
