--- a/templates/items/vice-sheet.hbs
+++ b/templates/items/vice-sheet.hbs
@@ -1,7 +1,7 @@
 <form class="{{cssClass}}" autocomplete="off">
 	<section class="item-top flex-horizontal">
 		<img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
+		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 
 	<section class="item-main flex-vertical">
