--- a/templates/parts/factions.hbs
+++ b/templates/parts/factions.hbs
@@ -3,7 +3,7 @@
 		<div class="label-stripe">
 
            <p>{{localize "BITD.Factions"}}</p>
-          <p><a class="item-add-popup" data-item-type="faction"><i class="fas fa-plus-square"></i></a></p>
+          <p><a class="comp-control comp-add" data-item-type="faction"><i class="fas fa-plus-square"></i></a></p>
         </div>
         <div>
           {{#each actor.items as |faction id|}}
@@ -11,14 +11,14 @@
             <div class="item flex-horizontal" data-item-id="{{faction._id}}">
               <div class="item-body flex-horizontal">
                 <img src="{{faction.img}}" title="{{faction.name}}" width="24" height="24"/>
-                <div class="item-name item-title">{{faction.name}}</div>
-                <div class="item-description">{{faction.data.description}}</div>
+                <div class="comp-title">{{faction.name}}</div>
+                <div class="comp-body-text">{{faction.data.description}}</div>
               </div>
-              <a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i class="fas fa-trash"></i></a>
+              <a class="comp-control comp-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i class="fas fa-trash"></i></a>
             </div>
           {{/if}}
           {{/each}}
-          <div class="item-playbook-label"><a class="item-add-popup" data-item-type="faction">{{localize "BITD.AddItem"}}</a></div>
+          <div class="item-playbook-label"><a class="comp-control comp-add" data-item-type="faction">{{localize "BITD.AddItem"}}</a></div>
         </div>
 
 </div>
